2011-12-13  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (arg0, executable): new functions
	(ask_file, main): adopted

	* lua/lua-akfavatar-prg.c (check_filename):
	don't ignore lua-akfavatar.lua anymore

	* avtaddons.h, arch.c (avta_arch_get_data):
	no size as parameter

2011-12-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (start_screen): add Homepage

2011-12-05  Andreas K. Foerster  <info@akfoerster.de>

	* lua/multiplication.lua: fix

2011-12-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_search, set_datapath): new functions

2011-11-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c: mark some variables as volatile

2011-10-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_delay): new function
	avatar.c (avt_put_char): use SDL_Delay()
	lua/lua-avt.c (lavt_delay): new function

2011-10-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait): optimization: use timer and an event

2011-10-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_show_image): call avt_checkevent()
	lua/akfavatar-graphic.c (lgraphic_show): don't call avt_update()

2011-10-06  Andreas K. Foerster  <info@akfoerster.de>

	* lua/four_in_a_row.lua: new file

	* avatar.c (avt_key): treat number pad depending on numlock

2011-10-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_disc): optional coordinates

2011-10-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (disc, lgraphic_disc): new functions

2011-10-02  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_put): position is optional
	optimized when same width and x==1

	* lua/akfavatar-graphic.c (lgraphic_put_transparency): new function

2011-10-01  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c: refactoring color handling
	background color now stored for each graphic
